# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.12
#

2005-12-19 08:44:57 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-127

    Summary:
      get ready to release 0.12.0
    Revision:
      itools--main--0.12--patch-127


    modified files:
     CHANGES.txt Changelog


2005-12-18 17:34:15 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-126

    Summary:
      cms, comment code specific to Zope
    Revision:
      itools--main--0.12--patch-126


    modified files:
     Changelog cms/File.py cms/Root.py


2005-12-18 17:29:51 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-125

    Summary:
      cms, fix copy and paste
    Revision:
      itools--main--0.12--patch-125


    modified files:
     Changelog cms/Folder.py cms/versioning.py


2005-12-18 17:08:50 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-124

    Summary:
      cms, change welcome page to profile page (#235)
    Revision:
      itools--main--0.12--patch-124


    modified files:
     Changelog cms/User.py cms/ui/User_profile.xml.en

    renamed files:
     cms/ui/.arch-ids/User_welcome.xml.en.id
       ==> cms/ui/.arch-ids/User_profile.xml.en.id
     cms/ui/User_welcome.xml.en
       ==> cms/ui/User_profile.xml.en


2005-12-16 14:04:08 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-123

    Summary:
      merge fix from the 0.11 branch
    Revision:
      itools--main--0.12--patch-123

    Patches applied:
    
     * jdavid@itaapy.com--public/itools--main--0.11--patch-68
       xhtml, fix ".translate" when there is non-ascii in the source
    

    modified files:
     Changelog xhtml/XHTML.py

    new patches:
     jdavid@itaapy.com--public/itools--main--0.11--patch-68


2005-12-16 08:00:23 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-122

    Summary:
      merge from herve (#203, #209)
    Revision:
      itools--main--0.12--patch-122

    Patches applied:
    